--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,9 @@
 # macOS-specific
 .DS_Store
 
+# MATLAB
+*.m~
+
 # pGDS-specific
     # Contains font .ttf
 fonts/
@@ -52,3 +55,4 @@ package-lock.json
     # "Proprietary" devices designs
 *devices.cpp
 *devices.hpp
+*devices.m
